--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     gap: 3rem;
     padding-top: 10vh;
     margin: 15vw;
@@ -41,15 +43,15 @@ header ul {
     width: 100%;
     justify-content: center;
     padding: 0.5rem 0.5rem;
-    gap: 4rem;
+    gap: 3rem;
+}
+.contacts {
+    margin: 0;
+    line-height: 1.3;
 }
 header ul a img {
     width: 4rem;
     height: 4rem;
-}
-span {
-    color: #fff;
-    font-size: 20px;
 }
 h2
 {
@@ -64,10 +66,30 @@ div .content-box{
     align-items: center;
     gap: 3rem;
     padding-top: 10vh;
+    padding: 1rem;
     margin: 10vw;
     margin-top: -10vw;
     font-weight: 500;
-    height: 25vw;
+    height: 30vw;
     border-radius: 50px;
     background: rgba(0, 0, 0, 0.5)
+}
+@media (max-width: 900px) {
+    header {
+        margin: 2vw;
+    }
+    header ul {
+        gap: 1rem;
+
+    }
+    header ul a img {
+    width: 3rem;
+    height: 3rem;
+    }
+    div .content-box{
+        margin: 2vw;
+        height: auto;
+        font-size: smaller;
+        padding: 1rem;
+    }
 }
